@@ -29,6 +29,7 @@ sub new {
 			),
 		],
 		'modified' => '2022-06-24T12:42:10Z',
+		'ns' => 146,
 		'senses' => [
 			Test::Shared::Fixture::Wikibase::Datatype::Sense::Wikidata::Dog->new,
 		],
